Bug#31881 A statement is not aborted immediately if an error inside a stored routine

Statement execution is not aborted immediately if an error happened
inside a stored routine.
  
By moving the error check into the field processing loop, execution will
be interupted on the first error which occurs in the statement.